--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@ p    {color:green} -->
 <!-- <p>Company description</p> -->
 </div>
 
-<span class="anchor" id="product"></span>
-<div class="product">
+<!--<span class="anchor" id="product"></span>-->
+<!--<div class="product">-->
 
-<p>Product list</p>
-</div> -->
+<!--<p>Product list</p>-->
+<!--</div> -->-->
 
 
 <!-- <div id="contact">
