--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ p    {color:green} -->
 <!-- <span class="anchor" id="profile"></span>
 <div class="profile">
 <!-- <p>Company description</p> -->
-</div>
+<!--</div>-->
 
 <!--<span class="anchor" id="product"></span>-->
 <!--<div class="product">-->
