--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ p    {color:green} -->
 <!--<div class="product">-->
 
 <!--<p>Product list</p>-->
-<!--</div> -->-->
+<!--</div> -->
 
 
 <!-- <div id="contact">
