--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@ p    {color:green} -->
 
 </div>
 
-<!-- <span class="anchor" id="profile"></span>
-<div class="profile">
+<!-- <span class="anchor" id="profile"></span> -->
+<!--div class="profile"-->
 <!-- <p>Company description</p> -->
 <!--</div>-->
 
