--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <title>  Vshine Technology  </title> 
 <link href="css/style.css" rel="stylesheet"   type="text/css" />
-
 <script src="ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 <script>
 $(document).ready(function() {
@@ -14,120 +13,6 @@ $(document).ready(function() {
         }, 500);
     });
 });
-
-<script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.15/p5.js"></script>
-
-
-<!-- <style>
-head {background-color:blue}
-body   {background-color:blue}
-p    {color:green} -->
-
- <script>
-
-// var message = "chinacommerce@hotmail.com",
-//   font,
-//   bounds, // holds x, y, w, h of the text's bounding box
-//   fontsize = 30,
-//   x, y; // x and y coordinates of the text
-
-// function preload() {
-//   font = loadFont('assets/LeagueGothic-Regular.otf');
-//   //font = loadFont('verdana');
- 
-
-// }
-
-// function setup() {
-
-
- 
-//   // createCanvas(710, 400);
-//  var cnv =  createCanvas(windowWidth, windowHeight);
-//  cnv.parent("slide");
-
-//   // set up the font
-//   textFont(font);
-//   textSize(fontsize);
-
-//   // get the width and height of the text so we can center it initially
-//   bounds = font.textBounds(message, 0, 0, fontsize);
-//   // x = width / 2 - bounds.w / 2;
-//   // y = height / 2 - bounds.h / 2;
-
-//  x = 100;
-//  y = fontsize;
-//  // console.log(y);
-// }
-
-// function draw() {
-//   // instead of clearing the background, fade it by drawing
-//   // a semi-transparent rectangle on top
-//   // fill(204, 120);
-//   noStroke();
-//   rect(0, 0, width, height);
-
-//   // write the text in black and get its bounding box
-//   fill(0);
-//   text(message, x, y);
-//   bounds = font.textBounds(message,x,y,fontsize);
-
-//   // check if the mouse is inside the bounding box and tickle if so
-//   if ( mouseX >= bounds.x && mouseX <= bounds.x + bounds.w &&
-//     mouseY >= bounds.y && mouseY <= bounds.y + bounds.h) {
-//     x += random(-fontsize/5, fontsize/5);
-//     y += random(-fontsize/5, fontsize/5);
-//   }
-// }
-
-
-</script>
-
-<script>
-
-// var message = "tickle",
-//   font,
-//   bounds, // holds x, y, w, h of the text's bounding box
-//   fontsize = 60,
-//   x, y; // x and y coordinates of the text
-
-// function preload() {
-//   // font = loadFont('assets/LeagueGothic-Regular.otf');
-// }
-
-// function setup() {
-//   createCanvas(710, 400);
-
-//   // set up the font
-//   // textFont(font);
-//   textSize(fontsize);
-
-//   // get the width and height of the text so we can center it initially
-//   bounds = font.textBounds(message, 0, 0, fontsize);
-//   x = width / 2 - bounds.w / 2;
-//   y = height / 2 - bounds.h / 2;
-// }
-
-// function draw() {
-//   // instead of clearing the background, fade it by drawing
-//   // a semi-transparent rectangle on top
-//   fill(204, 120);
-//   rect(0, 0, width, height);
-
-//   // write the text in black and get its bounding box
-//   fill(0);
-//   text(message, x, y);
-//   bounds = font.textBounds(message,x,y,fontsize);
-
-//   // check if the mouse is inside the bounding box and tickle if so
-//   if ( mouseX >= bounds.x && mouseX <= bounds.x + bounds.w &&
-//     mouseY >= bounds.y && mouseY <= bounds.y + bounds.h) {
-//     x += random(-5, 5);
-//     y += random(-5, 5);
-//   }
-// }
-
-
   // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -196,48 +81,51 @@ p    {color:green} -->
 
 <body>
    
-<div id="header">
-<div class="logo">
-<a href="index.htm"> <img src="static/logo.jpg" alt="vshine tech" width="120px"/> </a>
-<!-- <p> Vshine &nbsp; Technology</p> -->
-</div> <!--  end of logo -->
-
-<div class="bg-link">
-<ul class="navigation">
-<li><a href="" >PRODUCT LIST</a></li> 
-<li><a href="">ABOUT US</a></li>             
-<li><a href="mailto:chinacommece@hotmail.com">CONTACT US</a></li>
-</ul>   
-</div>  <!--  end of bg-link -->
-
-
-
-</div>  <!--  end of header -->
 
 
 
 <div id="slide">
-<!-- <p>slide</p> -->
-<img src="static/cover3.jpg" alt="vshine tech" width="100%" height="430px"/>
+
+<!-- <div class="slideshow-class-goes-here">
+    <figure>
+        <img src="static/cover3.jpg" width="100%" />
+        <figcaption>Caption goes here</figcaption> 
+    </figure>
+
+</div> -->
+
+<img src="static/cover3.jpg" alt="vshine tech" width="100%" height="500px"/>
 <span>
 <p>The website is under construction.</p>
 <p>For all business inquiries please contact us at</p>
 <p><b>chinacommece@hotmail.com</b></p>
 </span>
-
 </div>
 
+<div id="header">
+<div class="logo">
+<a href="index.htm"> <img src="static/logo_circle.png" alt="vshine tech" width="120px"/> </a>
+<!-- <p> Vshine &nbsp; Technology</p> -->
+</div> <!--  end of logo -->
+
+<!-- <div class="bg-link">
+<ul class="navigation">
+<li><a href="" >PRODUCT LIST</a></li> 
+<li><a href="">ABOUT US</a></li>             
+<li><a href="mailto:chinacommece@hotmail.com">CONTACT US</a></li>
+</ul>   
+</div>  end of bg-link -->
+
+</div>  <!--  end of header -->
 <!-- <span class="anchor" id="profile"></span>
 <div class="profile">
-<!-- <p>Company description</p> -->
+<p>Company description</p>
 </div>
 
 <span class="anchor" id="product"></span>
 <div class="product">
-
 <p>Product list</p>
 </div> -->
-
 
 <!-- <div id="contact">
 <ul>
@@ -252,17 +140,16 @@ p    {color:green} -->
 
 <div id="foot">
 <p class=footfont>
-
 Copyright &#169; Chengdu Vshine Technology Co. Ltd <br> No.88,Wangjiang Road, Xinjin County, Chengdu, Sichuan, China 610000
 <br>chinacommece@hotmail.com
-<br>Tel: +86 2882515538
-
+<br>Tel: (86 28) 82515538
 </p>
 <div class="sociallogo">
 <!-- <div class="sociallogogroup"> -->
+<a href="http://www.aliexpress.com/store/1923217"><img src="static/ali.png" width="50px"/></a>
 <a href="https://plus.google.com/+VshineTechnology/posts"><img src="static/g.png" width="50px"/></a>
-<a href=""><img src="static/f.png" width="50px"/></a>
-<a href=""><img src="static/twitter.png" width="50px"/></a>
+<a href="https://www.facebook.com/vshinetech?fref=ts&ref=br_tf"><img src="static/f.png" width="50px"/></a>
+<a href="https://twitter.com/VshineTech"><img src="static/twitter.png" width="50px"/></a>
 <!-- <a href=""><img src="static/lk.png" width="50px"/></a> -->
 
 <!-- </div> -->
