--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
 
 </script>
 
-<link rel="icon" type="image/png" href="static/logo2.jpg"/>
+<link rel="icon" type="image/png" href="static/tiny-logo.png"/>
 </head>
 
 <body>
