--- a/index.html
+++ b/index.html
@@ -1,167 +1,267 @@
-<!DOCTYPE html> 
-<html> 
-<head>
-<title>  Vshine Technology  </title> 
-<link href="css/style.css" rel="stylesheet"   type="text/css" />
-<script src="ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+
+<!DOCTYPE html>
+<html>
+<title>Vshine Technologies</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<style>
+html,body,h1,h2,h3,h4,h5 {font-family: "Lato", sans-serif}
+.mySlides {display:none}
+.w3-left, .w3-right, .w3-tag {cursor:pointer}
+.w3-tag {height:15px;width:15px;padding:0;margin-top:6px}
+</style>
+
 <script>
-$(document).ready(function() {
-    $('ul.navigation').on('click', 'a', function() {       
-        // e.preventDefault();
-        $('html, body').animate({
-            scrollTop: $( $.attr(this, 'href') ).offset().top
-        }, 500);
-    });
-});
-  // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  // ga('create', 'UA-40841636-1', 'umich.edu');
-  // ga('send', 'pageview');
-
-// $(function () {
-//   $("#fixed-bar")
-//     .css({position:'fixed',bottom:'0px'})
-//     .hide();
-//   $(window).scroll(function () {
-//     if ($(this).scrollTop() > 400) {
-//       $('#fixed-bar').fadeIn(200);
-//     } else {
-//       $('#fixed-bar').fadeOut(200);
-//     }
-//   });
-//   $('.go-top').click(function () {
-//     $('html,body').animate({
-//       scrollTop: 0
-//     }, 1000);
-//     return false;
-//   });
-// });
-
-// $(document).ready(function() {
-// 	var showChar = 950;
-// 	var ellipsestext = "...";
-// 	var moretext = "Continue reading";
-// 	var lesstext = "Less";
-// 	$('.more').each(function() {
-// 		var content = $(this).html();
-// 
-// 		if(content.length > showChar) {
-// 
-// 			var c = content.substr(0, showChar);
-// 			var h = content.substr(showChar, content.length - showChar);
-// 
-// 			var html = c + '<span class="moreelipses">'+ellipsestext+'</span><span class="morecontent"><span>' + h + '</span>&nbsp;&nbsp;<a href="" class="morelink">'+moretext+'</a></span>';
-// 
-// 			$(this).html(html);
-// 		}
-// 
-// 	});
-// 
-// 	$(".morelink").click(function(){
-// 		if($(this).hasClass("less")) {
-// 			$(this).removeClass("less");
-// 			$(this).html(moretext);
-// 		} else {
-// 			$(this).addClass("less");
-// 			$(this).html(lesstext);
-// 		}
-// 		$(this).parent().prev().toggle();
-// 		$(this).prev().toggle();
-// 		return false;
-// 	});
-// });
-
+// var _hmt = _hmt || [];
+// (function() {
+// var hm = document.createElement("script");
+// hm.src = "//hm.baidu.com/hm.js?73c27e26f610eb3c9f3feb0c75b03925";
+// var s = document.getElementsByTagName("script")[0];
+// s.parentNode.insertBefore(hm, s);
+// })();
 </script>
 
-<link rel="icon" type="image/png" href="static/tiny-logo.png"/>
-</head>
-
 <body>
-   
 
-
-
-<div id="slide">
-
-<!-- <div class="slideshow-class-goes-here">
-    <figure>
-        <img src="static/cover3.jpg" width="100%" />
-        <figcaption>Caption goes here</figcaption> 
-    </figure>
-
-</div> -->
-
-<img src="static/cover3.jpg" alt="vshine tech" width="100%" height="500px"/>
-<span>
-<p>The website is under construction.</p>
-<p>For all business inquiries please contact us at</p>
-<p><b>chinacommece@hotmail.com</b></p>
-</span>
-</div>
-
-<div id="header">
-<div class="logo">
-<a href="index.htm"> <img src="static/logo_circle.png" alt="vshine tech" width="120px"/> </a>
-<!-- <p> Vshine &nbsp; Technology</p> -->
-</div> <!--  end of logo -->
-
-<!-- <div class="bg-link">
-<ul class="navigation">
-<li><a href="" >PRODUCT LIST</a></li> 
-<li><a href="">ABOUT US</a></li>             
-<li><a href="mailto:chinacommece@hotmail.com">CONTACT US</a></li>
-</ul>   
-</div>  end of bg-link -->
-
-</div>  <!--  end of header -->
-<!-- <span class="anchor" id="profile"></span>
-<div class="profile">
-<p>Company description</p>
-</div>
-
-<span class="anchor" id="product"></span>
-<div class="product">
-<p>Product list</p>
-</div> -->
-
-<!-- <div id="contact">
-<ul>
-<li id="contactphone"><img src="static/phone.png" width="90px" height="63px"/><span class="contacttext">(734) 358-3913</span></li><br/> 
-<li id="contactemail"><img src="static/mail.png" width="90px" height="63px"/><span class="contacttext">xuke@umich.edu</span></li><br/> 
-<li id="contactAddress"><img src="static/address.png" width="90px" height="63px"/><span class="contacttext1">1177 Hillcrest Blvd</span></li>
-<p class="contacttext2">Millbrae, CA, 94030</p>
+<!-- Navbar -->
+<ul class="w3-navbar w3-left-align w3-light-grey w3-center w3-top w3-large">
+  <li class="w3-left" style="width:33.3% !important"><a href="javascript:void(0)" class="w3-text-teal">Home</a></li>
+  <li class="w3-left" style="width:33.3% !important"><a href="javascript:void(0)">About</a></li>
+  <li class="w3-left" style="width:33.3% !important"><a href="javascript:void(0)">Contact</a></li>
 </ul>
-</div> -->
 
-
-
-<div id="foot">
-<p class=footfont>
-Copyright &#169; Chengdu Vshine Technology Co. Ltd <br> No.88,Wangjiang Road, Xinjin County, Chengdu, Sichuan, China 610000
-<br>chinacommece@hotmail.com
-<br>Tel: (86 28) 82515538
-</p>
-<div class="sociallogo">
-<!-- <div class="sociallogogroup"> -->
-<a href="http://www.aliexpress.com/store/1923217"><img src="static/ali.png" width="50px"/></a>
-<a href="https://plus.google.com/+VshineTechnology/posts"><img src="static/g.png" width="50px"/></a>
-<a href="https://www.facebook.com/vshinetech?fref=ts&ref=br_tf"><img src="static/f.png" width="50px"/></a>
-<a href="https://twitter.com/VshineTech"><img src="static/twitter.png" width="50px"/></a>
-<!-- <a href=""><img src="static/lk.png" width="50px"/></a> -->
-
-<!-- </div> -->
-</div>
-</div>
-
-<!-- <div id='fixed-bar'>
-  <div id='bar-inner'>
-    <a class='go-top' href='#' title='back to top' ><img src="static/up.png" width="50px"/></a>
+<!-- Content -->
+<div class="w3-content w3-container" style="max-width:1100px;margin-top:80px;margin-bottom:80px">
+  <div class="w3-section">
+    <h1><b>Vshine Technologies</b></h1>
+    <p>A Power Tool Company</p>
   </div>
-</div> -->
 
+  <!-- Slideshow -->
+  <div class="w3-display-container mySlides">
+    <img src="img_01.jpg" style="width:100%">
+    <div class="w3-display-topleft w3-text-white w3-container w3-padding-32 w3-hide-small">
+      <span class="w3-white w3-padding-large w3-animate-bottom">Lorem ipsum</span>
+    </div>
+  </div>
+  <div class="w3-display-container mySlides">
+    <img src="img_02.jpg" style="width:100%">
+    <div class="w3-display-middle w3-text-white w3-container w3-padding-32 w3-hide-small">
+      <span class="w3-white w3-padding-large w3-animate-bottom">Lorem ipsum hipsum</span>
+    </div>
+  </div>
+  <div class="w3-display-container mySlides">
+    <img src="img_03.jpg" style="width:100%">
+    <div class="w3-display-topright w3-text-white w3-container w3-padding-32 w3-hide-small">
+      <span class="w3-white w3-padding-large w3-animate-bottom">Lorem ipsum hipsum</span>
+    </div>
+  </div>
+
+  <!-- Slideshow next/previous buttons -->
+  <div class="w3-container w3-dark-grey w3-padding-8">
+    <div class="w3-left w3-hover-text-teal w3-large" onclick="plusDivs(-1)">&#10094;</div>
+    <div class="w3-right w3-hover-text-teal w3-large" onclick="plusDivs(1)">&#10095;</div>
+
+    <div class="w3-center">
+      <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+      <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+      <span class="w3-tag demodots w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+    </div>
+  </div>
+
+  <!-- Grid -->
+  <div class="w3-row">
+    <div class="w3-center w3-padding-64">
+      <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">What We Offer</span>
+    </div>
+    <div class="w3-col l3 m6 w3-light-grey w3-padding-large">
+      <h3>Design</h3>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-grey w3-padding-large">
+      <h3>Branding</h3>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-dark-grey w3-padding-large">
+      <h3>Consultation</h3>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+    </div>
+
+    <div class="w3-col l3 m6 w3-black w3-padding-large">
+      <h3>Promises</h3>
+      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+    </div>
+  </div>
+
+  <!-- Grid -->
+<!--   <div class="w3-row-padding" style="margin:0 -16px">
+    <div class="w3-center w3-padding-64">
+      <h3>Pricing Plans</h3>
+      <p>Choose a pricing plan that fits your needs.</p>
+    </div>
+
+    <div class="w3-third w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-center w3-hover-shadow">
+        <li class="w3-black">
+          <p class="w3-xlarge">Basic</p>
+        </li>
+        <li class="w3-padding-16"><b>10GB</b> Storage</li>
+        <li class="w3-padding-16"><b>10</b> Emails</li>
+        <li class="w3-padding-16"><b>10</b> Domains</li>
+        <li class="w3-padding-16"><b>Endless</b> Support</li>
+        <li class="w3-padding-16">
+          <h2 class="w3-wide">$ 10</h2>
+          <span class="w3-opacity">per month</span>
+        </li>
+        <li class="w3-light-grey w3-padding-24">
+          <button class="w3-btn w3-green w3-padding-large">Sign Up</button>
+        </li>
+      </ul>
+    </div>
+
+    <div class="w3-third w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-center w3-hover-shadow">
+        <li class="w3-dark-grey">
+          <p class="w3-xlarge">Pro</p>
+        </li>
+        <li class="w3-padding-16"><b>25GB</b> Storage</li>
+        <li class="w3-padding-16"><b>25</b> Emails</li>
+        <li class="w3-padding-16"><b>25</b> Domains</li>
+        <li class="w3-padding-16"><b>Endless</b> Support</li>
+        <li class="w3-padding-16">
+          <h2 class="w3-wide">$ 25</h2>
+          <span class="w3-opacity">per month</span>
+        </li>
+        <li class="w3-light-grey w3-padding-24">
+          <button class="w3-btn w3-green w3-padding-large">Sign Up</button>
+        </li>
+      </ul>
+    </div>
+
+    <div class="w3-third w3-margin-bottom">
+      <ul class="w3-ul w3-border w3-center w3-hover-shadow">
+        <li class="w3-black">
+          <p class="w3-xlarge">Premium</p>
+        </li>
+        <li class="w3-padding-16"><b>50GB</b> Storage</li>
+        <li class="w3-padding-16"><b>50</b> Emails</li>
+        <li class="w3-padding-16"><b>50</b> Domains</li>
+        <li class="w3-padding-16"><b>Endless</b> Support</li>
+        <li class="w3-padding-16">
+          <h2 class="w3-wide">$ 50</h2>
+          <span class="w3-opacity">per month</span>
+        </li>
+        <li class="w3-light-grey w3-padding-24">
+          <button class="w3-btn w3-green w3-padding-large">Sign Up</button>
+        </li>
+      </ul>
+    </div>
+  </div> -->
+
+  <!-- Grid -->
+  <div class="w3-row-padding" style="margin:0 -16px">
+    <div class="w3-center w3-padding-64">
+      <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Who We Are</span>
+    </div>
+
+    <div class="w3-third w3-margin-bottom">
+      <div class="w3-card-4">
+        <img src="img_avatar1.png" alt="Norway" style="width:100%">
+        <div class="w3-container">
+          <h3>Jangbo Su</h3>
+          <p class="w3-opacity">CEO & Founder</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pelCEO & Founderlentesque elementum.</p>
+          <p><button class="w3-btn">Contact</button></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="w3-third w3-margin-bottom">
+      <div class="w3-card-4">
+        <img src="img_avatar3.png" alt="Norway" style="width:100%">
+        <div class="w3-container">
+          <h3>Weishi Zeng</h3>
+          <p class="w3-opacity">Marketing & Co-founder</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p><button class="w3-btn">Contact</button></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="w3-third w3-margin-bottom">
+      <div class="w3-card-4">
+        <img src="img_avatar6.png" alt="Norway" style="width:100%">
+        <div class="w3-container">
+          <h3>Peter Wang</h3>
+          <p class="w3-opacity">Sales Manager & Purchasing</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p><button class="w3-btn">Contact</button></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contact -->
+  <div class="w3-center w3-padding-64">
+    <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Contact Us</span>
+  </div>
+
+  <form>
+    <div class="w3-group">
+      <label>Name</label>
+      <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" type="text">
+    </div>
+    <div class="w3-group">
+      <label>Name</label>
+      <input class="w3-input w3-border w3-hover-border-black" style="width:100%;" type="text">
+    </div>
+    <div class="w3-group">
+      <label>Subject</label>
+      <input class="w3-input w3-border w3-hover-border-black" style="width:100%;">
+    </div>
+    <button type="button" class="w3-btn w3-btn-block w3-padding-8">Send</button>
+  </form>
+
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-32 w3-light-grey w3-center">
+  <h4>Footer</h4>
+  <p>Powered by Mini Cho</p>
+</footer>
+
+<script>
+// Slideshow script
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function currentDiv(n) {
+  showDivs(slideIndex = n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("demodots");
+  if (n > x.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = x.length} ;
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+     dots[i].className = dots[i].className.replace(" w3-white", "");
+  }
+  x[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " w3-white";
+}
+</script>
 
 </body>
 </html>
